--- a/src/component/tab/tab.css
+++ b/src/component/tab/tab.css
@@ -1,9 +1,8 @@
 .tab_container{margin: 20px;}
-.tab_wrap{display: flex;flex-direction: row;justify-content: flex-end;border-right: 1px solid #dedede;height: 36px;line-height: 36px;border-bottom: 1px solid #dedede;background: #fafafa}
+.tab_wrap{display: flex;flex-direction: row;justify-content: flex-end;border-right: 1px solid #dedede;height: 36px;line-height: 36px;border-bottom: 1px solid #dedede;}
 .tab_tittle{cursor: pointer;padding:0 20px;border-top: 1px solid #dedede;border-left: 1px solid #dedede;background: #ff5000;color: #fff}
 .active{background: #fff;color: #333;position: relative;}
 .active:after{content: '';border-bottom: 1px solid #fff;display: block;position: absolute;height: 2px;width: 100%;left: 0;bottom: -1px;}
-.item_wrap{height: 300px;border: 1px solid #dedede;border-top: none;}
 .tab_item{display: none;}
 .show{display: block;}
 
